--- a/overlays/dev/kustomization.yaml
+++ b/overlays/dev/kustomization.yaml
@@ -25,8 +25,8 @@ patches:
     version: v1
 
 
-#resources: 
+resources: 
 #- namespace.yaml
-##- amq-instance.yaml
+- 3scale-instance.yaml
 # - sso-realms/test-client-testclient.yaml
 # - sso-realms/test-realm.yaml
