--- a/overlays/dev/secret-s3-auth.yaml
+++ b/overlays/dev/secret-s3-auth.yaml
@@ -5,7 +5,7 @@ metadata:
 stringData:
   AWS_ACCESS_KEY_ID: sEGCcjufrtYX3xzUKVXv
   AWS_SECRET_ACCESS_KEY: TNApvSYwz0G0BGWhSgZnIEn4RpLggBoDH9sRNkyd
-  AWS_BUCKET: buckets/3scale
+  AWS_BUCKET: 3scale
   AWS_REGION: eu-west-1
   AWS_HOSTNAME: minio-minio.apps.cluster-v2pdq.v2pdq.sandbox2054.opentlc.com
   AWS_PROTOCOL: HTTPS
