--- a/overlays/dev/secret-s3-auth.yaml
+++ b/overlays/dev/secret-s3-auth.yaml
@@ -8,6 +8,6 @@ stringData:
   AWS_BUCKET: 3scale
   AWS_REGION: eu-west-1
   AWS_HOSTNAME: minio-minio.apps.cluster-v2pdq.v2pdq.sandbox2054.opentlc.com
-  AWS_PROTOCOL: HTTPS
+  AWS_PROTOCOL: HTTP
   AWS_PATH_STYLE: "false"
 type: Opaque
