--- a/overlays/dev/secret-s3-auth.yaml
+++ b/overlays/dev/secret-s3-auth.yaml
@@ -3,8 +3,10 @@ apiVersion: v1
 metadata:
   name: s3-auth
 stringData:
-  AWS_ACCESS_KEY_ID: sEGCcjufrtYX3xzUKVXv
-  AWS_SECRET_ACCESS_KEY: TNApvSYwz0G0BGWhSgZnIEn4RpLggBoDH9sRNkyd
+  #AWS_ACCESS_KEY_ID: sEGCcjufrtYX3xzUKVXv
+  #AWS_SECRET_ACCESS_KEY: TNApvSYwz0G0BGWhSgZnIEn4RpLggBoDH9sRNkyd
+  AWS_ACCESS_KEY_ID: minioadmin
+  AWS_SECRET_ACCESS_KEY: minioadmin
   AWS_BUCKET: 3scale
   AWS_REGION: eu-west-1
   AWS_HOSTNAME: minio-minio.apps.cluster-v2pdq.v2pdq.sandbox2054.opentlc.com
