--- a/overlays/dev/secret-s3-auth.yaml
+++ b/overlays/dev/secret-s3-auth.yaml
@@ -12,5 +12,5 @@ stringData:
   #AWS_HOSTNAME: minio-minio.apps.cluster-v2pdq.v2pdq.sandbox2054.opentlc.com
   AWS_HOSTNAME: minio.minio.svc.cluster.local:9000
   AWS_PROTOCOL: HTTP
-  AWS_PATH_STYLE: "false"
+  AWS_PATH_STYLE: "true"
 type: Opaque
