--- a/overlays/3scale/kustomization.yaml
+++ b/overlays/3scale/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
-- ../../base
+- ../../base-operator
 
 # generatorOptions:
 #  disableNameSuffixHash: true
@@ -17,7 +17,7 @@ patches:
 - patch: |-
     - op: add
       path: /spec/targetNamespaces/-
-      value: 3scale-dev
+      value: 3scale
   target:
     group: operators.coreos.com
     kind: OperatorGroup
@@ -29,5 +29,6 @@ resources:
 #- namespace.yaml
 - 3scale-instance.yaml
 - secret-s3-auth.yaml
+#- tenant/dev/tenant.yaml
 # - sso-realms/test-client-testclient.yaml
 # - sso-realms/test-realm.yaml
