--- a/overlays/3scale/tenant/dev/tenant.yaml
+++ b/overlays/3scale/tenant/dev/tenant.yaml
@@ -8,7 +8,7 @@ spec:
   username: admin
   systemMasterUrl: https://master.apps.cluster-v2pdq.v2pdq.sandbox2054.opentlc.com
   email: admin@ecorp.com
-  organizationName: ECorp
+  organizationName: dev
   masterCredentialsRef:
     name: system-seed
     namespace: 3scale
