--- a/overlays/tenant-dev/kustomization.yaml
+++ b/overlays/tenant-dev/kustomization.yaml
@@ -17,7 +17,7 @@ patches:
 - patch: |-
     - op: add
       path: /spec/targetNamespaces/-
-      value: 3scale
+      value: 3scale-dev
   target:
     group: operators.coreos.com
     kind: OperatorGroup
