--- a/overlays/tenant-dev/tenant.yaml
+++ b/overlays/tenant-dev/tenant.yaml
@@ -11,7 +11,7 @@ spec:
   organizationName: dev
   masterCredentialsRef:
     name: system-seed
-    namespace: 3scale
+    namespace: 3scale-dev
   passwordCredentialsRef:
     name: dev-admin-secret
   tenantSecretRef:
