--- a/overlays/3scale/kustomization.yaml
+++ b/overlays/3scale/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-bases:
- - ../../base-operator
+# bases:
+#  - ../../base-operator
 
 # generatorOptions:
 #  disableNameSuffixHash: true
@@ -13,16 +13,16 @@ bases:
 #   envs:
 #   - env/sso-credential.env
 
-patches:
-- patch: |-
-    - op: add
-      path: /spec/targetNamespaces/-
-      value: 3scale
-  target:
-    group: operators.coreos.com
-    kind: OperatorGroup
-    name: 3scale
-    version: v1
+# patches:
+# - patch: |-
+#     - op: add
+#       path: /spec/targetNamespaces/-
+#       value: 3scale
+#   target:
+#     group: operators.coreos.com
+#     kind: OperatorGroup
+#     name: 3scale
+#     version: v1
 
 
 resources: 
