--- a/overlays/tenant-dev/kustomization.yaml
+++ b/overlays/tenant-dev/kustomization.yaml
@@ -32,5 +32,7 @@ resources:
 - rolebinding.yaml
 - product/product-01.yaml
 - product/product-511.yaml
+- product/echo-product.yaml
+- product/echo-backend.yaml
 # - sso-realms/test-client-testclient.yaml
 # - sso-realms/test-realm.yaml
