--- a/overlays/3scale/secret-s3-auth.yaml
+++ b/overlays/3scale/secret-s3-auth.yaml
@@ -5,8 +5,8 @@ metadata:
 stringData:
   #AWS_ACCESS_KEY_ID: sEGCcjufrtYX3xzUKVXv
   #AWS_SECRET_ACCESS_KEY: TNApvSYwz0G0BGWhSgZnIEn4RpLggBoDH9sRNkyd
-  AWS_ACCESS_KEY_ID: NagXPywq27zOktsI0aJz
-  AWS_SECRET_ACCESS_KEY: LYYy6Jqbgngq2wxeYtOV6zJYNIfXkRLHiIFZSxh1
+  AWS_ACCESS_KEY_ID: minioadmin
+  AWS_SECRET_ACCESS_KEY: minioadmin
   AWS_BUCKET: 3scale
   AWS_REGION: eu-west-1
   #AWS_HOSTNAME: minio-minio.apps.cluster-v2pdq.v2pdq.sandbox2054.opentlc.com
