--- a/overlays/tenant-dev/tenant.yaml
+++ b/overlays/tenant-dev/tenant.yaml
@@ -6,7 +6,7 @@ metadata:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   username: admin
-  systemMasterUrl: https://master.apps.cluster-v2pdq.v2pdq.sandbox2054.opentlc.com
+  systemMasterUrl: https://master.apps.cluster-t2xqd.t2xqd.sandbox2018.opentlc.com
   email: admin@ecorp.com
   organizationName: dev
   masterCredentialsRef:
