--- a/overlays/tenant-dev/product/account.yaml
+++ b/overlays/tenant-dev/product/account.yaml
@@ -1,7 +1,7 @@
 kind: DeveloperAccount
 apiVersion: capabilities.3scale.net/v1beta1
 metadata:
-  name: developeraccount-simple-sample
+  name: ecorp
 spec:
   orgName: Ecorp
   providerAccountRef:
