--- a/overlays/tenant-dev/product/app-echoapi.yaml
+++ b/overlays/tenant-dev/product/app-echoapi.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: 3scale-dev
 spec:
   accountCR:
-    name: developeraccount-simple-sample
+    name: ecorp
   applicationPlanName: plan01
   description: 'testing application '
   name: testApp
