--- a/overlays/tenant-dev/kustomization.yaml
+++ b/overlays/tenant-dev/kustomization.yaml
@@ -29,14 +29,17 @@ resources:
 #- namespace.yaml
 - tenant.yaml
 - dev-admin-secret.yaml
+- dev-user-secret.yaml
+
 - rolebinding.yaml
-- product/product-01.yaml
-- product/product-511.yaml
+#- product/product-01.yaml
+#- product/product-511.yaml
 
 
 - product/echo-product.yaml
 - product/echo-backend.yaml
 - product/account.yaml
 - product/app-echoapi.yaml
+- product/user.yaml
 # - sso-realms/test-client-testclient.yaml
 # - sso-realms/test-realm.yaml
