--- a/overlays/tenant-dev/dev-user-secret.yaml
+++ b/overlays/tenant-dev/dev-user-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: dev-admin-secret
+  name: dev-user-secret
 type: Opaque
 stringData:
   admin_password: "devpassword"
