--- a/overlays/tenant-dev/kustomization.yaml
+++ b/overlays/tenant-dev/kustomization.yaml
@@ -39,8 +39,8 @@ resources:
 - product/echo-product.yaml
 - product/echo-backend.yaml
 ##- product/account.yaml
-- product/accountuser.yaml
-- product/app-echoapi.yaml
+#- product/accountuser.yaml
+#- product/app-echoapi.yaml
 #- product/user.yaml
 # - sso-realms/test-client-testclient.yaml
 # - sso-realms/test-realm.yaml
