--- a/overlays/3scale/kustomization.yaml
+++ b/overlays/3scale/kustomization.yaml
@@ -30,3 +30,8 @@ resources:
 - 3scale-instance.yaml
 - secret-s3-auth.yaml
 - clusterrole.yaml
+
+# dev tenant
+- dev-admin-secret.yaml
+- dev-tenant.yaml
+
