--- a/overlays/tenant-dev/product/echo-backend.yaml
+++ b/overlays/tenant-dev/product/echo-backend.yaml
@@ -7,5 +7,6 @@ spec:
   name: Operated Backend Echo API
   privateBaseURL: 'https://echo-api.3scale.net'
   providerAccountRef:
-    name: tenant-secret
+    name: dev-tenant-secret
+    #namespace: 3scale
   systemName: echo_api_backend
