--- a/overlays/3scale/kustomization.yaml
+++ b/overlays/3scale/kustomization.yaml
@@ -32,7 +32,7 @@ resources:
 - clusterrole.yaml
 
 # dev tenant
-- dev-tenant-namespace.yaml
+#- dev-tenant-namespace.yaml
 - dev-admin-secret.yaml
 - dev-tenant.yaml
 
