--- a/overlays/3scale/dev-tenant.yaml
+++ b/overlays/3scale/dev-tenant.yaml
@@ -2,6 +2,7 @@ apiVersion: capabilities.3scale.net/v1alpha1
 kind: Tenant
 metadata:
   name: dev-tenant
+  namespace: 3scale-dev
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
@@ -11,7 +12,7 @@ spec:
   organizationName: dev
   masterCredentialsRef:
     name: system-seed
-#    namespace: 3scale
+    namespace: 3scale
   passwordCredentialsRef:
     name: dev-admin-secret
   tenantSecretRef:
