--- a/overlays/3scale/dev-admin-secret.yaml
+++ b/overlays/3scale/dev-admin-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: dev-admin-secret
+  namespace: 3scale-dev
 type: Opaque
 stringData:
   admin_password: "devtenantpass"
