--- a/overlays/tenant-dev/cr-definitions/applications/app-echoapi-basic.yaml
+++ b/overlays/tenant-dev/cr-definitions/applications/app-echoapi-basic.yaml
@@ -7,7 +7,7 @@ spec:
    name: clh-area2
   applicationPlanName: plan_basic
   description: 'testing application'
-  name: testApp-dev
+  name: testApp-basic-dev
   productCR:
     name: echo-api-product-sample
   suspend: false
