--- a/overlays/3scale/kustomization.yaml
+++ b/overlays/3scale/kustomization.yaml
@@ -2,7 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
   - ../../base-operator
-
+configurations:
+  - config.yaml
 # generatorOptions:
 #  disableNameSuffixHash: true
 # secretGenerator:
@@ -36,4 +37,13 @@ resources:
 - resources/dev-tenant-namespace.yaml
 - resources/dev-admin-secret.yaml
 - resources/dev-tenant.yaml
+
+vars:
+  - name: DOMAIN
+    objref:
+      apiVersion: apps.3scale.net/v1alpha1
+      kind: APIManager
+      name: apimanager-sample
+    fieldref:
+      fieldpath: spec.wildcardDomain
 
