--- a/overlays/3scale/kustomization.yaml
+++ b/overlays/3scale/kustomization.yaml
@@ -14,7 +14,7 @@ generatorOptions:
 #   envs:
 #   - env/sso-credential.env
 configMapGenerator:
-- name: keycloak-db-secret
+- name: zync-ca-bundle
   files:
   - resources/certs/zync.pem
 
