--- a/overlays/3scale/kustomization.yaml
+++ b/overlays/3scale/kustomization.yaml
@@ -18,16 +18,24 @@ configMapGenerator:
   files:
   - resources/certs/zync.pem
 
-# patches:
-# - patch: |-
-#     - op: add
-#       path: /spec/targetNamespaces/-
-#       value: 3scale
-#   target:
-#     group: operators.coreos.com
-#     kind: OperatorGroup
-#     name: 3scale
-#     version: v1
+patches:
+- patch: |-
+    - op: add
+      path: /spec/template/spec/volume-
+      value: 
+        - name: zync-ca-bundle
+          configMap:
+            name: zync-ca-bundle
+            items:
+              - key: zync.pem
+                path: zync.pem
+            defaultMode: 420
+  target:
+    group: apps.openshift.io
+    kind: DeploymentConfig
+    name: zync-que
+    version: v1
+
 # replacements:
 #   - path: image-tag-replacement.yaml
 
