--- a/overlays/3scale/resources/patches/zync-que.yaml
+++ b/overlays/3scale/resources/patches/zync-que.yaml
@@ -3,6 +3,7 @@ kind: DeploymentConfig
 apiVersion: apps.openshift.io/v1
 metadata:
   name: zync-que
+  namespace: 3scale
 spec:
   template:
     spec:
