--- a/overlays/3scale/resources/patches/zync-que.yaml
+++ b/overlays/3scale/resources/patches/zync-que.yaml
@@ -7,7 +7,12 @@ metadata:
 spec:
   template:
     spec:
-
+      containers:
+        - name: que
+          volumeMounts:
+            - name: zync-ca-bundle
+              mountPath: /etc/pki/tls/zync/zync.pem
+              subPath: zync.pem
 
       volumes:
         - name: zync-ca-bundle
